Sprint3 Unidad 2 Páctica

--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
@@ -56,9 +56,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teresa = np.array([-2, -5])\n",
+    "udo = np.array([0, 4])\n",
+    "teresa_udo = np.array([[-2, -5], [0, 4]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 5  4]\n",
+      " [ 2 -3]\n",
+      " [ 3  5]\n",
+      " [-5  4]\n",
+      " [ 0 -1]\n",
+      " [ 3  2]\n",
+      " [-1  1]\n",
+      " [ 5 -2]\n",
+      " [-5  3]\n",
+      " [-5  1]\n",
+      " [-2 -5]\n",
+      " [ 0  4]]\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_aidone = [[5, 4],\n",
     " [2, -3],\n",
@@ -69,7 +108,13 @@
     " [-1, 1],\n",
     " [5, -2],\n",
     " [-5, 3],\n",
-    " [-5, 1]]\n"
+    " [-5, 1]]\n",
+    "\n",
+    "my_array = np.array(alumnos_aidone)\n",
+    "# my_array = np.vstack([my_array, teresa])\n",
+    "# my_array = np.vstack([my_array, udo])\n",
+    "my_array = np.concatenate([my_array, teresa_udo])\n",
+    "print(my_array)"
    ]
   },
   {
@@ -94,9 +139,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Para Rodrigo con vector [5 4]:\n",
+      "Rodrigo asignado a CAI\n",
+      "Para Lucia con vector [ 2 -3]:\n",
+      "Lucia asignado a ER\n",
+      "Para Alejandro con vector [3 5]:\n",
+      "Alejandro asignado a CAI\n",
+      "Para Valeria con vector [-5  4]:\n",
+      "Valeria asignado a NMPC\n",
+      "Para Javier con vector [ 0 -1]:\n",
+      "Javier asignado a ER\n",
+      "Para Camila con vector [3 2]:\n",
+      "Camila asignado a CAI\n",
+      "Para Diego con vector [-1  1]:\n",
+      "Diego asignado a NMPC\n",
+      "Para Gabriela con vector [ 5 -2]:\n",
+      "Gabriela asignado a ER\n",
+      "Para Mateo con vector [-5  3]:\n",
+      "Mateo asignado a NMPC\n",
+      "Para Sofía con vector [-5  1]:\n",
+      "Sofía asignado a NMPC\n",
+      "Para Teresa con vector [-2 -5]:\n",
+      "Teresa asignado a ER\n",
+      "Para Udo con vector [0 4]:\n",
+      "Udo asignado a CAI\n"
+     ]
+    }
+   ],
    "source": [
     "alumnos_ref = [\"Rodrigo\",\"Gabriela\",\"Mateo\"]\n",
     "lista_alumnos = ['Rodrigo', 'Lucia', 'Alejandro', 'Valeria', 'Javier', 'Camila', 'Diego', 'Gabriela', 'Mateo', 'Sofía','Teresa','Udo']\n",
@@ -104,6 +180,7 @@
     "\n",
     "##### CAMBIA LA SIGUIENTE LINEA, según 2.1 ######\n",
     "diccionario_reparto = {} \n",
+    "reparto = np.zeros((12, 3))\n",
     "#################################################\n",
     "\n",
     "num_alumnos = len(lista_alumnos)\n",
@@ -111,8 +188,8 @@
     "for i_vector in range(num_alumnos): # Recorremos el diccionario donde tenemos el vector que caracteriza \n",
     "    \n",
     "    alumno = lista_alumnos[i_vector]\n",
-    "    vector_alumno = alumnos_aidone[i_vector]\n",
-    "    print(f\"Par {alumno} con vector {vector_alumno}:\")\n",
+    "    vector_alumno = my_array[i_vector]\n",
+    "    print(f\"Para {alumno} con vector {vector_alumno}:\")\n",
     "\n",
     "    distancia_minima = 99999999 \n",
     "    indice_distancia_minima = -1\n",
@@ -121,16 +198,16 @@
     "\n",
     "    for indice_curso,alumno_ref in enumerate(alumnos_ref):\n",
     "        indice_alumno_ref = lista_alumnos.index(alumno_ref)\n",
-    "        vec_ref = alumnos_aidone[indice_alumno_ref] \n",
+    "        vec_ref = my_array[indice_alumno_ref] \n",
     "        \n",
     "        ####### 2.2 MODIFICA EL SIGUIENTE FRAGMENTO PARA UTILIZAR METODOS Y FuNCIONES NUMPY, recuerda que la norma se obtiene con np.linalg.norm ####\n",
-    "        distancia = distancia_2d(vector, vec_ref, 1) # Obtenemos la distancia \n",
+    "        distancia = np.linalg.norm(vector_alumno - vec_ref) # Obtenemos la distancia \n",
     "        #########################################################################################################################################\n",
     "        vector_distancias[indice_curso] = distancia\n",
-    "   \n",
+    "\n",
     "    ######################################################### 2.3 COMPLETA LA SIGUIENTE LINEA ######################################\n",
-    "    indice_curso_elegido = __.___(______)\n",
-    "    print(f\"{____________[___________]}\")\n",
+    "    indice_curso_elegido = np.argmin(vector_distancias)\n",
+    "    print(f\"{alumno} asignado a {curso_asignado[indice_curso_elegido]}\")\n",
     "    ###############################################################################################"
    ]
   },
@@ -145,7 +222,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "A **Teresa** le asignamos **ER**  \n",
+    "A **UDO** le asignamos **CAI**"
+   ]
   },
   {
    "attachments": {
@@ -188,11 +268,153 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import random"
+    "import random\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "En la posición (1, 1) ya hay un barco.\n",
+      "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
+      "FALLASTE\n",
+      "FALLASTE\n",
+      "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' '-' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' '-' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def crear_tablero(filas=10, columnas=10):\n",
+    "    return np.full((filas, columnas), \" \")\n",
+    "\n",
+    "def generar_barco(tablero, tamaño):\n",
+    "    if tamaño > tablero.shape[0] or tamaño > tablero.shape[1]:\n",
+    "        return None\n",
+    "    rand = np.random.randint(0, 2)\n",
+    "    if rand == 0:\n",
+    "        fila = np.random.randint(0, tablero.shape[0])\n",
+    "        col = np.random.randint(0, tablero.shape[1] - tamaño +1)\n",
+    "        axis = np.arange(col, col + tamaño)\n",
+    "        posiciones = np.array([[fila, col] for col in axis])\n",
+    "        # axis = np.arange(vec_origen[1], vec_origen[1] + tamaño)\n",
+    "    else:\n",
+    "        fila = np.random.randint(0, tablero.shape[0] - tamaño + 1)\n",
+    "        col = np.random.randint(0, tablero.shape[1])\n",
+    "        axis = np.arange(fila, fila + tamaño)\n",
+    "        posiciones = np.array([[f, col] for f in axis])\n",
+    "\n",
+    "    return posiciones\n",
+    "\n",
+    "# TODO Terminar checkear bien las posiciones\n",
+    "def check_posiciones(axis_plus, axis, vec_barco, tablero):\n",
+    "    check = True\n",
+    "    for i in range(1, vec_barco.size/vec_barco.shape[0] + 1):\n",
+    "        if axis_plus + i < tablero.shape[0] and tablero[axis_plus + i, axis] == \" \":\n",
+    "            tablero[axis_plus + 1, axis] = \"O\"\n",
+    "        else:\n",
+    "            check = False\n",
+    "    \n",
+    "                \n",
+    "def posicionar_barcos(tablero, vec_barco):    \n",
+    "    for fila, col in vec_barco:\n",
+    "        if 0 <= fila < tablero.shape[0] and 0 <= col < tablero.shape[1]:\n",
+    "            if tablero[fila, col] == \"O\":\n",
+    "                if fila + 1 < tablero.shape[0] and tablero[fila + 1, col] == \" \":\n",
+    "                    tablero[fila + 1, col] = \"O\"\n",
+    "                elif fila - 1 >= 0 and tablero[fila - 1, col] == \" \":\n",
+    "                    tablero[fila - 1, col] = \"O\"\n",
+    "                elif col + 1 < tablero.shape[1] and tablero[fila, col + 1] == \" \":\n",
+    "                    tablero[fila, col + 1] = \"O\"\n",
+    "                elif col - 1 >= 0 and tablero[fila, col - 1] == \" \":\n",
+    "                    tablero[fila, col - 1] = \"O\"\n",
+    "                else:\n",
+    "                    return tablero\n",
+    "            else:\n",
+    "                tablero[fila, col] = \"O\"\n",
+    "        else:\n",
+    "            return tablero\n",
+    "    return tablero\n",
+    "\n",
+    "def recibir_disparo(tablero, vec):\n",
+    "    if vec[0] < tablero.shape[0] and vec[1] < tablero.shape[1] and\\\n",
+    "        vec[0] >= 0 and vec[1] >= 0:\n",
+    "        if tablero[vec[0], vec[1]] == \"O\":\n",
+    "            tablero[vec[0], vec[1]] = \"X\"\n",
+    "            return tablero\n",
+    "        else:\n",
+    "            tablero[vec[0], vec[1]] = \"-\"\n",
+    "            print(\"FALLASTE\")\n",
+    "            return tablero\n",
+    "tablero = crear_tablero(15, 10)\n",
+    "\n",
+    "barco = np.array([[4,1], [1,1]])\n",
+    "barco1 = np.array([[0,1], [1,1]])\n",
+    "barco2 = np.array([[1,3], [1,4], [1,5], [1,6]])\n",
+    "barco3 = generar_barco(tablero, 4)\n",
+    "\n",
+    "tablero = posicionar_barcos(tablero, barco)\n",
+    "tablero = posicionar_barcos(tablero, barco1)\n",
+    "tablero = posicionar_barcos(tablero, barco2)\n",
+    "tablero = posicionar_barcos(tablero, barco3)\n",
+    "print(tablero)\n",
+    "\n",
+    "tablero = recibir_disparo(tablero, [4,5])\n",
+    "tablero = recibir_disparo(tablero, [6,8])\n",
+    "print(tablero)\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -205,7 +427,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.4 64-bit",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -219,14 +441,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
+   "version": "3.12.10"
   },
-  "orig_nbformat": 4,
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
-  }
+  "orig_nbformat": 4
  },
  "nbformat": 4,
  "nbformat_minor": 2
