Live Review Sprint3 Unidad2

--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_01_Numpy_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_I.ipynb
@@ -77,23 +77,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[[50.  49.   1. ]\n",
-      " [58.5 61.   0. ]\n",
-      " [43.5 43.5  0. ]]\n",
-      "[1 0 0]\n",
-      "[[50.  49. ]\n",
-      " [58.5 61. ]\n",
-      " [43.5 43.5]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -111,9 +97,9 @@
     "indices_minimos = np.argmin(mat_costes, axis=1)\n",
     "mat_res = np.insert(mat_costes, mat_costes.shape[1], indices_minimos, 1)\n",
     "\n",
-    "print(mat_res)\n",
+    "print(mat_costes)\n",
     "print(indices_minimos)\n",
-    "print(mat_costes)\n"
+    "print(mat_res)\n"
    ]
   },
   {
