--- a/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_03/Unidad_02_Numpy_II/03_Practica_Obligatoria/18_Practica_Obligatoria_Numpy_II.ipynb
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "teresa = np.array([-2, -5])\n",
     "udo = np.array([0, 4])\n",
-    "teresa_udo = np.array([[-2, -5], [0, 4]])"
+    "teresa_udo = np.array([teresa, udo])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -94,7 +94,8 @@
       " [-5  3]\n",
       " [-5  1]\n",
       " [-2 -5]\n",
-      " [ 0  4]]\n"
+      " [ 0  4]]\n",
+      "[5, 4]\n"
      ]
     }
    ],
@@ -112,8 +113,8 @@
     "\n",
     "my_array = np.array(alumnos_aidone)\n",
     "# my_array = np.vstack([my_array, teresa])\n",
-    "# my_array = np.vstack([my_array, udo])\n",
-    "my_array = np.concatenate([my_array, teresa_udo])\n",
+    "my_array = np.vstack((my_array, teresa, udo))\n",
+    "# my_array = np.concatenate((my_array, teresa_udo))\n",
     "print(my_array)"
    ]
   },
@@ -139,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -147,28 +148,40 @@
      "output_type": "stream",
      "text": [
       "Para Rodrigo con vector [5 4]:\n",
+      "[1000 1000 1000]\n",
       "Rodrigo asignado a CAI\n",
       "Para Lucia con vector [ 2 -3]:\n",
+      "[1000 1000 1000]\n",
       "Lucia asignado a ER\n",
       "Para Alejandro con vector [3 5]:\n",
+      "[1000 1000 1000]\n",
       "Alejandro asignado a CAI\n",
       "Para Valeria con vector [-5  4]:\n",
+      "[1000 1000 1000]\n",
       "Valeria asignado a NMPC\n",
       "Para Javier con vector [ 0 -1]:\n",
+      "[1000 1000 1000]\n",
       "Javier asignado a ER\n",
       "Para Camila con vector [3 2]:\n",
+      "[1000 1000 1000]\n",
       "Camila asignado a CAI\n",
       "Para Diego con vector [-1  1]:\n",
+      "[1000 1000 1000]\n",
       "Diego asignado a NMPC\n",
       "Para Gabriela con vector [ 5 -2]:\n",
+      "[1000 1000 1000]\n",
       "Gabriela asignado a ER\n",
       "Para Mateo con vector [-5  3]:\n",
+      "[1000 1000 1000]\n",
       "Mateo asignado a NMPC\n",
       "Para Sofía con vector [-5  1]:\n",
+      "[1000 1000 1000]\n",
       "Sofía asignado a NMPC\n",
       "Para Teresa con vector [-2 -5]:\n",
+      "[1000 1000 1000]\n",
       "Teresa asignado a ER\n",
       "Para Udo con vector [0 4]:\n",
+      "[1000 1000 1000]\n",
       "Udo asignado a CAI\n"
      ]
     }
@@ -277,18 +290,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ']\n",
+      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
@@ -299,34 +312,18 @@
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
-      "En la posición (1, 1) ya hay un barco.\n",
-      "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
-      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']]\n",
       "FALLASTE\n",
       "FALLASTE\n",
       "[[' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' 'O' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
       " [' ' 'O' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ']\n",
       " [' ' 'O' ' ' ' ' ' ' '-' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' '-' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
-      " [' ' ' ' ' ' 'O' 'O' 'O' 'O' ' ' ' ' ' ']\n",
+      " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
       " [' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ' ']\n",
