--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/01_Workout/01_Series.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/01_Workout/01_Series.ipynb
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -393,7 +393,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -432,7 +432,7 @@
        "array([1.6 , 1.59, 1.87, 2.05, 1.75])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -466,7 +466,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -496,17 +496,17 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\edici\\AppData\\Local\\Temp\\ipykernel_55256\\3862107824.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
+      "C:\\Users\\Manuel\\AppData\\Local\\Temp\\ipykernel_18220\\3862107824.py:1: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
       "  data[1]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "1.59"
+       "np.float64(1.59)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "jupyter": {
@@ -528,10 +528,30 @@
     {
      "data": {
       "text/plain": [
-       "1.75"
+       "np.float64(1.59)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.iloc[1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "np.float64(1.75)"
+      ]
+     },
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,14 +562,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\edici\\AppData\\Local\\Temp\\ipykernel_55256\\3501142499.py:2: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
+      "C:\\Users\\Manuel\\AppData\\Local\\Temp\\ipykernel_18220\\3501142499.py:2: FutureWarning: Series.__setitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To set a value by position, use `ser.iloc[pos] = value`\n",
       "  otra_serie[2] = 3.05\n"
      ]
     },
@@ -562,7 +582,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -575,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +606,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,28 +650,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Introduzca nombre de ciudad (1/5) Algeciras\n",
-      "Introduzca nombre de ciudad (2/5) Ceuta\n",
-      "Introduzca nombre de ciudad (3/5) Ferrol\n",
-      "Introduzca nombre de ciudad (4/5) Cadiz\n",
-      "Introduzca nombre de ciudad (5/5) Madrid\n"
+      "['Valencia', 'Madrid', 'Malaga', 'Toledo', 'Cuenca']\n",
+      "0    Valencia\n",
+      "1      Madrid\n",
+      "2      Malaga\n",
+      "3      Toledo\n",
+      "4      Cuenca\n",
+      "dtype: object\n"
      ]
     }
    ],
+   "source": [
+    "ciudades_lst = []\n",
+    "\n",
+    "while len(ciudades_lst) < 5:\n",
+    "    ciudad = input(\"Introduce una ciudad\")\n",
+    "    ciudades_lst.append(ciudad)\n",
+    "\n",
+    "ciudades = pd.Series(ciudades_lst)\n",
+    "print(ciudades_lst)\n",
+    "print(ciudades)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "ls_ciudades = []\n",
     "for i in range(5):\n",
@@ -663,21 +695,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    Algeciras\n",
-       "1        Ceuta\n",
-       "2       Ferrol\n",
-       "3        Cadiz\n",
-       "4       Madrid\n",
+       "0    Algecira\n",
+       "1       Ceuta\n",
+       "2      Ferrol\n",
+       "3       Casiz\n",
+       "4      Madrid\n",
        "Name: Mis_Ciudades, dtype: object"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
