--- a/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
+++ b/02_Herramientas_Avanzadas/Sprint_04/Unidad_01_Pandas_I/03_Practica_Obligatoria/18_Practica_Obligatoria_Pandas_I.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 154,
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 154,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 155,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 155,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 156,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 157,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 158,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +379,7 @@
        "Up                           735         2006         54.34     13.525948"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -390,28 +390,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 163,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "La película con menor recaudació es del año 2006\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\Manuel\\AppData\\Local\\Temp\\ipykernel_13988\\91959232.py:2: FutureWarning: Series.__getitem__ treating keys as positions is deprecated. In a future version, integer keys will always be treated as labels (consistent with DataFrame behavior). To access a value by position, use `ser.iloc[pos]`\n",
-      "  print(f\"La película con menor recaudació es del año {df[\"Lanzamiento\"][indice]}\")\n"
+      "La película con menor recaudació es del año 2006.0\n"
      ]
     }
    ],
    "source": [
     "indice = df[\"Recaudación\"].argmin()\n",
-    "print(f\"La película con menor recaudació es del año {df[\"Lanzamiento\"][indice]}\")"
+    "print(f\"La película con menor recaudació es del año {df.iloc[indice][\"Lanzamiento\"]}\")"
    ]
   },
   {
