--- a/03_Data_Analysis/Sprint_05/Unidad_02_Procesado_Datos_Internos_Ficheros/01_Workout/01_Lectura_Escritura_txt.ipynb
+++ b/03_Data_Analysis/Sprint_05/Unidad_02_Procesado_Datos_Internos_Ficheros/01_Workout/01_Lectura_Escritura_txt.ipynb
@@ -108,10 +108,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "Pug\n",
+      "Jack Russell Terrier\n",
+      "English Springer Spaniel\n",
+      "German Shepherd\n",
+      "Staffordshire Bull Terrier\n",
+      "Cavalier King Charles Spaniel\n",
+      "Golden Retriever\n",
+      "West Highland White Terrier\n",
+      "Boxer\n",
+      "Border Terrier\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./data/dog_breeds.txt\", \"r\") as open_file:\n",
+    "    all_text = open_file.read()\n",
+    "    print(type(all_text))\n",
+    "    print(all_text)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -141,10 +164,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['Pug\\n', 'Jack Russell Terrier\\n', 'English Springer Spaniel\\n', 'German Shepherd\\n', 'Staffordshire Bull Terrier\\n', 'Cavalier King Charles Spaniel\\n', 'Golden Retriever\\n', 'West Highland White Terrier\\n', 'Boxer\\n', 'Border Terrier']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./data/dog_breeds.txt\", \"r\") as open_file:\n",
+    "    all_text = open_file.readlines()\n",
+    "    print(type(all_text))\n",
+    "    print(all_text)"
+   ]
   },
   {
    "cell_type": "code",
@@ -162,10 +199,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n",
+      "['Pug', 'Jack Russell Terrier', 'English Springer Spaniel', 'German Shepherd', 'Staffordshire Bull Terrier', 'Cavalier King Charles Spaniel', 'Golden Retriever', 'West Highland White Terrier', 'Boxer', 'Border Terrier']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"./data/dog_breeds.txt\", \"r\") as f:\n",
+    "    lineas = [line.replace(\"\\n\", \"\") for line in f]\n",
+    "    print(type(lineas))\n",
+    "    print(lineas)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -176,10 +227,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Pug',\n",
+       " 'Jack Russell ',\n",
+       " 'English Springer ',\n",
+       " 'German Shepherd',\n",
+       " 'Staffordshire Bull ',\n",
+       " 'Cavalier King Charles ',\n",
+       " 'Golden Retriever',\n",
+       " 'West Highland White ',\n",
+       " 'Boxer',\n",
+       " 'Border ']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nuevos_datos = [perro.replace(\"Terrier\", \"\").replace(\"Spaniel\", \"\") for perro in lineas]\n",
+    "nuevos_datos\n"
+   ]
   },
   {
    "attachments": {},
@@ -191,11 +265,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pug\n",
+      "Jack Russell \n",
+      "English Springer \n",
+      "German Shepherd\n",
+      "Staffordshire Bull \n",
+      "Cavalier King Charles \n",
+      "Golden Retriever\n",
+      "West Highland White \n",
+      "Boxer\n",
+      "Border \n"
+     ]
+    }
+   ],
    "source": [
-    "\n"
+    "with open(\"./data/new_breed.txt\", \"w\") as g:\n",
+    "    for linea in nuevos_datos:\n",
+    "        g.write(linea + \"\\n\")\n",
+    "\n",
+    "with open(\"./data/new_breed.txt\", \"r\") as f:\n",
+    "   for linea in f:\n",
+    "       print(linea, end=\"\")"
    ]
   },
   {
@@ -215,7 +312,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -229,12 +326,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.6"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "90139cb9a825bf3d63f6f6704e828dbd1ff7edbd4d0c6e906a71235d6efc74af"
-   }
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
